platform and esrb rating

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -24,8 +24,15 @@
   font-weight: bold;
 }
 
-#vgspyPanelSubtitle {
+#vgspyPanelSubtitle,
+#vgspyPlatform,
+#vgspyRating
+{
   font-size: 0.8em;
+}
+
+#vgspyPlatform {
+  padding-top: 10px;
 }
 
 #vgspyPanel {
