--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -58,9 +58,24 @@
   font-size: 13px;
 }
 
+.priceLabel {
+  color: black;
+  font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
+  font-weight: bold;
+  font-size: 13px;
+  padding-left: 5px;
+  padding-top: 10px;
+  margin-left: 5px;
+}
+
 .vgBox {
   padding: 5px;
   margin: 5px;
+}
+
+.vgPriceBox {
+  padding-left: 10px;
+  margin-left: 10px;
 }
 
 .priceLink {
