--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -27,7 +27,11 @@
 }
 
 #vgspyPanelTitle {
+  color: black;
+  font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
+  font-size: 12px;
   font-weight: bold;
+  margin-bottom: 5px;
 }
 
 #vgspyPanelSubtitle,
@@ -35,7 +39,10 @@
 #vgspyRating,
 #vgspyDate
 {
-  font-size: 0.8em;
+  font-size: 10px;
+  margin-left: 5px;
+  color: black;
+  font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
 }
 
 #vgspyPlatform {
