--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -15,6 +15,16 @@
   background-color: white;
 }
 
+* {
+  font-size: 10px;
+}
+
+/* :::::::::::::: Search Box ::::::::::::::: */
+
+#searchContainer {
+  font-size: 10px;
+}
+
 /* :::::::::::::: Game ID Card ::::::::::::::: */
 
 #gameIDCard {
@@ -29,7 +39,7 @@
 #vgspyPanelTitle {
   color: black;
   font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: bold;
   margin-bottom: 5px;
 }
@@ -39,7 +49,7 @@
 #vgspyRating,
 #vgspyDate
 {
-  font-size: 10px;
+  font-size: 8px;
   margin-left: 5px;
   color: black;
   font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
@@ -54,7 +64,7 @@
 ytplayer menulist {
   color: black;
   font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
-  font-size: 10px;
+  font-size: 8px;
 }
 
 
@@ -72,14 +82,14 @@ ytplayer menulist {
   color: white;
   font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 10px;
 }
 
 .priceLabel {
   color: black;
   font-family: "Lucida Grande",Tahoma,Verdana,Arial,Helvetica,sans-serif;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 10px;
   padding-left: 5px;
   padding-top: 10px;
   margin-left: 5px;
