Fix metacritic, and use the real title for the youtube search

--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -113,6 +113,10 @@ ytplayer menulist {
 
 /* :::::::::::::: Metacritic scores ::::::::::::::: */
 
+.noscore {
+  background-color: lightgray;
+}
+
 .highscore {
   background-color: lightgreen;
 }
