Some css tweaks, and make test for JSON sanity

--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -19,6 +19,10 @@
   font-size: 10px;
 }
 
+#vgspyResult {
+  overflow: auto;
+}
+
 /* :::::::::::::: Search Box ::::::::::::::: */
 
 #searchContainer {
