prefPane and don't use the moz-appearance for the searchbar

--- a/chrome/skin/vgspySidebar.css
+++ b/chrome/skin/vgspySidebar.css
@@ -29,6 +29,11 @@
   font-size: 10px;
 }
 
+#searchBox {
+  -moz-appearance: none;
+  
+}
+
 /* :::::::::::::: Game ID Card ::::::::::::::: */
 
 #gameIDCard {
